# final_project

./: CMakeLists.txt  README.md  main.cpp  patient.cpp  patient.h
include/: Patient.h
src/: Patient.cpp  main.cpp
